@@ -63,6 +63,25 @@ class TestFasterCSVFeatures < Test::Unit::TestCase
     assert_equal($/, FasterCSV.new(STDERR).instance_eval { @row_sep })
   end
   
+  def test_lineno
+    sample_data = <<-END_DATA.gsub(/^ +/, "")
+    line,1,abc
+    line,2,"def\nghi"
+    
+    line,4,jkl
+    END_DATA
+    assert_equal(5, sample_data.to_a.size)
+    
+    csv = FasterCSV.new(sample_data)
+    4.times do |line_count|
+      assert_equal(line_count, csv.lineno)
+      assert_not_nil(csv.shift)
+      assert_equal(line_count + 1, csv.lineno)
+    end
+    assert_nil(csv.shift)
+    csv.close
+  end
+  
   def test_unknown_options
     assert_raise(ArgumentError) do 
       FasterCSV.new(String.new, :unknown => :error)
